[package]
name = "binary_tree"
version = "0.1.0"
edition = "2018"
authors = ["Tim Siwula <siwulactim@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
